crates/procenv/tests/compile_fail/default_and_optional_conflict.rs
//! Test: Cannot use both default and optional

use procenv::EnvConfig;

#[derive(EnvConfig)]
struct Config {
    #[env(var = "API_KEY", default = "key", optional)]
    api_key: Option<String>,
}

fn main() {}
